# tape

./: Cargo.toml  LICENSE.md  README.md
tape/: Cargo.toml
tape/src/client/: cli.rs  main.rs
tape/src/common/: cli.rs  lib.rs  logger.rs
tape/src/server/: main.rs
tape_core/: Cargo.toml
tape_core/src/: buf.rs  engine.rs  factory.rs  io.rs  lib.rs  sound.rs
tape_core/src/buf/: iter.rs  proxy.rs  seq.rs
tape_core/src/buf/proxy/: dy.rs  int.rs
