[package]
name = "tape"
description = "Terminal audio player"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["nemo"]
repository = "https://github.com/n977/tape"

[[bin]]
name = "tapectl"
path = "src/client/main.rs"

[[bin]]
name = "taped"
path = "src/server/main.rs"

[lib]
name = "tape"
path = "src/common/lib.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
dirs = "5.0.1"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
serde_json = "1.0.117"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tape_core = { path = "../tape_core", features = ["serde"] }
