[package]
name = "tape_core"
description = "Core library for the tape audio player"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["nemo"]
repository = "https://github.com/n977/tape"

[features]
serde = []

[dependencies]
cpal = "0.15.3"
parking_lot = "0.12.2"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.61"
tracing = "0.1.40"
symphonia = { git = "https://github.com/n977/Symphonia", branch = "feature/re-exports", features = ["mpa"] }
